openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: segment-manager
  labels:
    name: segment-manager
    app: network-segment-manager
