openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: segment-manager-service
  namespace: segment-manager
  labels:
    app: network-segment-manager
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: network-segment-manager
